--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,18 @@
     --text-primary-hover : rgb(161, 39, 110);
     /* To reference images in the public folder, start the path with a forward slash */
     background-size: cover;
-    background-repeat: no-repeat;}
+    background-repeat: no-repeat;
+}
+
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+body {
+    background-color: var(--background);
+}
 [data-theme='dark'] {
     --background : #000;
     --text-primary : #fff;
@@ -19,10 +30,9 @@
 
 .dark-light-mode {
     background-color: var(--background);
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-  
     font-size: 20px;
     transition: all 0.5s;
 }
